--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.8",
         "laravel-echo": "^2.2.6",
-        "pusher-js": "^8.4.0"
+        "pusher-js": "^8.4.0",
+        "sortablejs": "^1.15.6"
     }
 }
