--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,7 +9,10 @@ cmds = [
 [phases.build]
 cmds = [
     "npm ci --include=dev",
-    "npm run build"
+    "npm run build",
+    "php artisan config:clear",
+    "php artisan route:clear",
+    "php artisan view:clear"
 ]
 
 [start]
